--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
 *{margin:0;padding:0;}
 html,body{width:100%;height:100%;}
-body{background-color: pink;}
+body{ 
+    background: -webkit-linear-gradient(top,#de809a,#c22155,#a00030); overflow:hidden;
+}
+
+.damiao-btn{
+    width:200px;height:80px;background-color: #a00030;color:#fff;line-height:80px;text-align:center;border-radius:5px;cursor:pointer;margin:100px auto 0;
+}
+.damiao-btn:hover{
+    opacity: .8;
+}
